# taskchampion

./: .gitignore  CLAUDE.md  Cargo.toml  Package.swift  README.md  rust-toolchain.toml
.github/workflows/: checks.yml  pr-check.yml  release-xcframework.yml  rust-tests.yml
Sources/TaskChampionFFI/: TaskChampionFFI.swift
docs/src/: storage.md
ffi/: Cargo.toml  uniffi.toml
ffi/src/: convert.rs  lib.rs  queries.rs  replica_ops.rs  task_ops.rs  types.rs
ffi/tests/: round_trip.rs
scripts/: build_xcframework.sh
src/: crate-doc.md  errors.rs  lib.rs  plan.rs  position.rs  replica.rs  treemap.rs
src/server/: mod.rs  op.rs  types.rs
src/storage/: inmemory.rs  mod.rs  test.rs
src/storage/indexeddb/: schema.rs  storage.rs
src/storage/powersync/: columns.rs  direct.rs  extension.rs  inner.rs  mod.rs
src/storage/send_wrapper/: actor.rs  test.rs  traits.rs  wrapper.rs
src/storage/sqlite/: inner.rs  schema.rs
src/task/: task.rs
src/taskdb/: apply.rs  mod.rs  op.rs  snapshot.rs  sync.rs  undo.rs
tests/: cross-sync.rs
