[package]
name = "taskchampion"
version = "3.0.2-pre"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
description = "Personal task-tracking"
homepage = "https://gothenburgbitfactory.github.io/taskchampion/"
documentation = "https://docs.rs/crate/taskchampion"
repository = "https://github.com/GothenburgBitFactory/taskchampion"
categories = ["command-line-utilities"]
keywords = ["cli", "todo", "tasks", "taskwarrior", "task-tracking"]
readme = "src/crate-doc.md"
license = "MIT"
edition = "2021"
rust-version = "1.91.1"

[workspace]
members = [ "xtask" ]
resolver = "2"

[lib]
crate-type = ["rlib"]

[features]
default = ["storage-powersync", "bundled"]

# Support for PowerSync task storage
storage-powersync = ["dep:rusqlite", "dep:powersync_core", "rusqlite/bundled"]
# Expose *_for_test() constructors for use in external crate tests
test-utils = ["storage-powersync"]
# static bundling of dependencies
bundled = ["rusqlite/bundled"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
fractional_index = "2.0.2"
chrono = { version = "^0.4.44", features = ["serde"] }
log = "^0.4.17"
powersync_core = { version = "=0.4.11", features = ["static"], optional = true }
rusqlite = { version = "0.38", features = [ "fallible_uint" ], optional = true}
serde_json = "^1.0"
serde = { version = "^1.0.147", features = ["derive"] }
strum = "0.28"
strum_macros = "0.28"
tokio = { version = "1", features = ["macros", "sync", "rt"] }
thiserror = "2.0"
uuid = { version = "^1.22.0", features = ["serde", "v4", "v7"] }

[dev-dependencies]
tempfile = "3"
rstest = "0.26"
pretty_assertions = "1"
libc = "0.2"
tokio = { version = "1", features = ["time", "rt"] }
