[package]
name = "taskchampion-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "taskchampion_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
taskchampion = { path = "..", features = ["storage-powersync", "storage-ffi"] }
uniffi = { version = "0.29", features = ["cli"] }
uuid = { version = "1", features = ["serde"] }
chrono = "0.4"
tokio = { version = "1", features = ["rt"] }
rusqlite = { version = "0.38", features = ["bundled"] }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[dev-dependencies]
taskchampion = { path = "..", features = ["storage-powersync", "storage-ffi", "test-utils"] }
rusqlite = { version = "0.38", features = ["bundled"] }
tokio = { version = "1", features = ["rt", "macros"] }
